# pic-rust

./: Cargo.toml  Taskfile.yml
.github/workflows/: pic-rust-build.yml  pic-rust-crates.yml
crates/pic-cat/: README.md
crates/pic-cat/src/: lib.rs
crates/pic-pca/: Cargo.toml  README.md
crates/pic-pca/benches/: pca_benchmark.rs  pca_cose_benchmark.rs  pca_serialization.rs  poc_benchmark.rs  poc_cose_benchmark.rs
crates/pic-pca/src/: coset.rs  lib.rs  pca.rs  poc.rs
src/: lib.rs
