[package]
name = "pic-protocol"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0" 

[lib]
name = "pic"

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pic-protocol/pic-protocol"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
ciborium = "0.2"

[dependencies]
pic-pca = { path = "crates/pic-pca" }
pic-cat = { path = "crates/pic-cat" }