[package]
name = "pic-protocol"
edition = "2024"
version.workspace = true
description = "PIC Protocol - Provenance Identity Continuity Protocol"
license = "Apache-2.0"
repository = "https://github.com/pic-protocol/pic-rust"
documentation = "https://docs.rs/pic-protocol"
keywords = ["authorization", "security", "distributed-systems"]
categories = ["authentication", "cryptography"]

[lib]
name = "pic"

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.0.0"
license = "Apache-2.0"
repository = "https://github.com/pic-protocol/pic-protocol"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
ciborium = "0.2"

[dependencies]
pic-pca = { path = "crates/pic-pca" }
pic-cat = { path = "crates/pic-cat" }